k8s-pods/mysql-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql
spec:
  hostname: mysql
  containers:
  - name: mysql
    image: mariadb:10.10
    volumeMounts:
    - name: var-lib-mysql
      mountPath: /var/lib/mysql
  volumes:
  - name: var-lib-mysql
    # Define the volume type and its source here
    # e.g., emptyDir, hostPath, persistentVolumeClaim, etc.
    # Assuming hostPath for demonstration purposes
    hostPath:
      path: /var/lib/mysql
      type: DirectoryOrCreate
