k8s-pods/slurmdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slurm-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slurm-mysql
  template:
    metadata:
      labels:
        app: slurm-mysql
    spec:
      hostname: slurmdbd
      containers:
        - name: mysql
          image: mariadb:10.10
        - name: slurmdbd
          image: badreddine970/slurmctld-prod:latest
          command:
            - "sh"
            - "-c"
            - |
              sed -i "s/@storagehost@/$(hostname -i)/" /etc/slurm/slurmdbd.conf 
              sed -i "s/=slurmctld/=172.20.255.200/" /etc/slurm/slurm.conf 
              . /etc/slurm/slurmdbd.conf
              check_database() {
                until echo "SELECT 1" | mysql -h $StorageHost -u$StorageUser -p$StoragePass 2>&1 > /dev/null
                do
                  echo "-- Waiting for database to become active ..."
                  sleep 2
                done
              }
              echo "-- Checking database availability ..."
              check_database
              echo "-- Database is now active ..."
              gosu munge /usr/sbin/munged
              exec gosu slurm /usr/sbin/slurmdbd -Dvvv
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "100m"
