k8s-pods/slurm-pod.yaml
apiVersion: v1
kind: Service
metadata:
  name: slurm-mysql-service
spec:
  selector:
    app: slurm-mysql
  ports:
    - name: mysql-port
      protocol: TCP
      port: 3306  # Adjust the port number if needed
    - name: slurmdbd-port
      protocol: TCP
      port: 6819  # Adjust the port number if needed
---
apiVersion: v1
kind: Pod
metadata:
  name: slurm-mysql
spec:
  hostname: slurmdbd
  containers:
    - name: mysql
      image: mariadb:10.10
      volumeMounts:
        - name: var-lib-mysql
          mountPath: /var/lib/mysql
    - name: slurmdbd
      image: badreddine970/slurmdbd:latest
      command:
        - "sh"
        - "-c"
        - |
          . /etc/slurm/slurmdbd.conf
          check_database() {
            until echo "SELECT 1" | mysql -h $StorageHost -u$StorageUser -p$StoragePass 2>&1 > /dev/null
            do
              echo "-- Waiting for database to become active ..."
              sleep 2
            done
          }
          echo "-- Checking database availability ..."
          check_database
          echo "-- Database is now active ..."
          exec gosu slurm /usr/sbin/slurmdbd -Dvvv
      resources:
        limits:
          memory: "512Mi"
          cpu: "500m"
        requests:
          memory: "256Mi"
          cpu: "100m"
      volumeMounts:
        - name: slurm-state-volume
          mountPath: /tmp
  volumes:
    - name: var-lib-mysql
      hostPath:
        path: /var/lib/mysql
        type: DirectoryOrCreate
    - name: slurm-state-volume
      persistentVolumeClaim:
        claimName: slurm-state-pvc
