k8s-pods/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/slurm(/|$)(.*)"
        backend:
          service:
            name: slurm
            port:
              number: 80
      - pathType: Prefix
        path: "/slurm(/|$)(.*)"
        backend:
          service:
            name: slurmdbd-lb
            port:
              number: 80
